# text-to-video

./: .gitignore  Makefile  README.md
apps/web/: package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/generate/: page.tsx
apps/web/app/history/: page.tsx
apps/web/app/hq/: page.tsx
apps/web/app/ops/: page.tsx
apps/web/app/veo/: page.tsx
apps/web/app/voices/: page.tsx
apps/web/components/generator/: JobProgress.tsx  (+2 more)
apps/web/lib/: api.ts  types.ts  validators.ts
docs/: api-contract.md  model-notes.md  plan.markdown  troubleshooting.md
docs/superpowers/plans/: 2026-05-20-person-only-background-lock.md
models/SadTalker/src/: __init__.py
scripts/: benchmark.py  run_all.sh  run_api.sh  run_web.sh  run_worker.sh  setup_mac.sh
services/api/: pyproject.toml
services/api/app/: config.py  db.py  main.py  models.py  schemas.py
services/api/app/routes/: files.py  health.py  images.py  jobs.py  scripts.py  voices.py
services/api/app/services/: audio_service.py  image_service.py  queue_service.py  storage_service.py
services/api/app/utils/: ids.py  paths.py
services/api/tests/: test_image_service.py
services/worker/: pyproject.toml  worker.py
services/worker/engines/: command_runner.py  omnivoice_engine.py  sadtalker_engine.py
services/worker/pipelines/: avatar_pipeline.py  veo_pipeline.py
services/worker/tests/: test_omnivoice_engine.py  test_sadtalker_motion.py  test_video_composite.py
services/worker/utils/: audio_postprocess.py  person_mask.py  text_prosody.py  video_composite.py
(+8 files in other folders)
