[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-voice-avatar-api"
version = "0.1.0"
description = "FastAPI backend for local AI voice clone + talking avatar workflow"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "pydantic>=2.8",
  "sqlalchemy>=2.0",
  "greenlet>=3.0",
  "aiosqlite>=0.20",
  "soundfile>=0.12",
  "pydub>=0.25",
  "librosa>=0.10",
  "numpy>=1.26",
  "pillow>=10.0",
  "opencv-python>=4.10",
  "mediapipe>=0.10.20",
  "torch>=2.4",
  "torchaudio>=2.4",
  "omnivoice",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
