[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-voice-avatar-worker"
version = "0.1.0"
description = "Local worker scaffold for AI voice avatar jobs"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

